--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'com.android.application'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+    }
+}
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
