--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.tsengvn:Typekit:1.0.0'
+    compile 'joda-time:joda-time:2.9.1'
+
+    compile 'com.parse.bolts:bolts-tasks:1.3.0'
+    compile 'com.parse:parse-android:1.12.0'
+
 }
