--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.tsengvn:Typekit:1.0.0'
     compile 'joda-time:joda-time:2.9.1'
-
+    compile 'com.google.code.gson:gson:2.5'
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
     compile 'com.parse:parse-android:1.12.0'
-
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
