--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
     compile 'com.parse:parse-android:1.12.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 }
