--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
     <application
         android:allowBackup="true"
         android:name=".view.main.MainApplication"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="false"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.parse.APPLICATION_ID"
@@ -32,28 +33,18 @@
             android:value="@string/parse_client_key" />
         <activity
             android:name=".view.main.NoticeActivity"
-            android:screenOrientation="portrait"
-            android:icon="@mipmap/logo"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".view.information.DepartmentActivity"
-            android:screenOrientation="portrait"
-            android:icon="@mipmap/logo"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".view.main.MainActivity"
-            android:screenOrientation="portrait"
-            android:icon="@mipmap/logo"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".view.main.StartActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
